--- a/css/blog.css
+++ b/css/blog.css
@@ -1,65 +1,83 @@
-body {
+.container {
     font-family: 'Quicksand', sans-serif;
     margin: 0 0;
     background-color: #fffaf0;
     box-sizing: border-box;
+    position: relative;
+    top: 120px;
 }
 
 
 .page-ruler {
-    margin-top: 9%;
-    padding-left: 40px
+    position: absolute;
+    top: 5px;
+    margin-left: 50px;
+    padding: 20px 0;
+    font-size: 1.2rem;
 }
-
-.intro {
+.bg_overlay{
+    background-image: url(../assets/backgrounds/bg-home-overlay.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    opacity: 1;
+    height: 70vh;
     position: relative;
+    z-index: 0;
+}
+.intro {
+    position: absolute;
     height: 300px;
     margin-top: 8%;
     padding-top: 5%;
     display: flex;
     align-items: cen;
     margin-bottom: 7%;
+   
 }
 
 .left-intro {
-
-    width: 25%;
-    margin-left: 20%;
+    position: absolute;
+    width: 65%;
+    margin-left: 35%;
     font-size: 28px;
+    z-index: 1;
+    top: -65vh;
 }
 
-.left-intro h3 {
-    margin: 20px 0;
+.left-intro h2 {
+    margin: 20px 0px;
 }
 
-.left-intro h5 {
-    font-weight: normal;
+.left-intro h4 {
+    font-weight: 500;
     margin-top: 1px;
-    font-size: 0.85em;
+    font-size: 1.6rem;
 }
 
 .left-intro p {
-    font-size: 0.74em;
+   
+    font-size: 1.5rem;
     width: 90%;
     margin-top: 8px;
 }
 
 
 .right-intro .img {
-    position: absolute;
-    top: -40%;
-    left: 30%;
-    z-index: 1;
+    position: relative;
+    top: -90vh;
+    left: 85%;
+    /* z-index: 1; */
 }
 
 .title {
     margin-left: 5%;
-    margin-top: 10%;
+    margin-top: 1%;
     margin-bottom: 2%;
     padding-top: 100px;
 }
 
-.title h3 {
+.title h2 {
     margin-left: 100px;
 }
 
@@ -70,8 +88,8 @@ body {
     text-align: left;
 }
 
-.hr-lines h3 {
-    font-size: 1.5em;
+.hr-lines h2 {
+    font-size: 2rem;
 }
 
 
@@ -152,10 +170,16 @@ body {
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
     display: none;
     width: 200px;
+    font-weight: 550;
 }
 
 .select-menu1 .options a:visited,
 .select-menu2 .options a:visited {
+    color: black;
+    /* giữ màu đen cho thẻ a */
+}
+.select-menu1 .options a,
+.select-menu2 .options a {
     color: black;
     /* giữ màu đen cho thẻ a */
 }
@@ -298,7 +322,7 @@ body {
 
 .blog-text {
     margin-top: 10px;
-    font-size: 1.1em;
+    font-size: 1.1rem;
     line-height: 1.5;
 }
 
@@ -320,6 +344,7 @@ body {
     border-style: none;
     margin-top: 3%;
     cursor: pointer;
+    font-size: 1rem;
 }
 
 .blog-card button:hover {
@@ -434,10 +459,11 @@ body {
 
 .deals {
     position: relative;
-    height: 1200px;
-    background-image: url(/images/overlay-bg\ 1.png);
+    height: 150vh;
+    background-image: url(../assets/backgrounds/bg-home-overlay.png);
     background-repeat: repeat-x;
     background-size: 80% 110%;
+    background-color: #fffaf0;
 
 }
 
@@ -486,10 +512,11 @@ body {
     margin-left: 10%;
     text-align: center;
     color: #fff;
+    font-size: 18px;
 }
 
 .booking-btn p {
-    margin: 10px 0;
+    margin: 10px 0px;
     margin-left: 8%;
 
 }
@@ -571,4 +598,78 @@ body {
     position: relative;
     margin-left: 7%;
     bottom: 5%;
+}
+
+/* partner */
+.partner{
+    position: relative;
+    background: #FF8C4E;
+    height: 80vh;
+    font-size: 1.5rem;
+    background-image: url(../assets/backgrounds/bg-partner-overlay.png);
+}
+.partner>h1{
+    position: relative;
+    text-align: center;
+    padding-top: 70px;
+}
+.partner>svg{
+    width: 90px;
+    height: 90px;
+    position: absolute;
+    fill: white;
+    left: 47%;
+    top: 50px;
+}
+.partner_list{
+    display: flex;
+    width: 100%;
+    animation: slide 40s infinite linear;
+}
+.partner_wrapper{
+    width: 85%;
+    overflow: hidden;
+    position: relative;
+    top: 10vh;
+    left: 7%;
+}
+@keyframes slide {
+    0%{
+        transform: translateX(0);
+    }
+    10%{
+        transform: translateX(-15%);
+    }
+    20%{
+        transform: translateX(-30%);
+    }
+    30%{
+        transform: translateX(-40%);
+    }
+    40%{
+        transform: translateX(-50%);
+    }
+    50%{
+        transform: translateX(-60%);
+    }
+    60%{
+        transform: translateX(-50%);
+    }
+    70%{
+        transform: translateX(-40%);
+    }
+    80%{
+        transform: translateX(-30%);
+    }
+    90%{
+        transform: translateX(-15%);
+    }
+    100%{
+        transform: translateX(0);
+    }
+}
+#footer{
+    position: absolute;
+    width: 100%;
+    top: 500vh;
 }
