--- a/css/Exercise.css
+++ b/css/Exercise.css
@@ -1,17 +1,33 @@
 .container-body{
     position: relative;
-    top: 150px;
+    top: 120px;
+    font-size: 1.5rem;
+    background-color: #fffaf0;
 }
 
 /* intro */
-.location{
+.address{
+    position: absolute;
+    top: 5px;
     margin-left: 50px;
+    padding: 20px 0;
+    font-size: 1.2rem;
+}
+.bg_overlay{
+    background-image: url(../assets/backgrounds/bg-home-overlay.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    opacity: 1;
+    height: 78vh;
+    position: relative;
+    z-index: 0;
 }
 .intro_content{
     width: 40%;
-    position: relative;
+    position: absolute;
     left: 50%;
-    top: 50px;
+    top: 100px;
     text-align: center;
 }
 .intro_content h1{
@@ -20,22 +36,25 @@
 .btn{
     display: flex;
     justify-content: center;
-    background-color: #F2AB1E;
-    width: 130px;
-    height: 50px;
+    background-color: #FF6B35;
+    width: 150px;
+    height: 60px;
     border-radius: 40px;
     text-align: center;
     font-weight: bold;
     margin: 50px 50px;
+    color: white;
+    box-shadow: 2px 2px 2px grey;
+    font-size: 1.2rem;
 }
 .btn i{
     position: relative;
-    top: 18px;
+    top: 23.5px;
     margin: 5px;
 }
 .btn>p{
     position: relative;
-    top: 15px;
+    top: 18px;
 }
 .intro_btn_field{
     display: flex;
@@ -43,7 +62,6 @@
 }
 
 .bg{
-    
     width: 100%;
 }
 .img_intro_exercise{
@@ -56,21 +74,22 @@
 /* infor */
 .infor_fr{
     position: absolute;
-    top: 520px;
-    height: 270vh;
+    top: 68vh;
+    height: 300vh;
 }
 .infor{
     position: relative;
-    top:400px;
+    top: 20vh;
 }
 .infor_content{
-    width: 30%;
+    width: 40%;
     line-height: 30px;
     font-weight: bold;
     position: absolute;
-    left: 200px;
+    left: 10vw;
+    font-size: 1.3rem;
 }
-.infor_content h1{
+.infor_content h2{
     margin-bottom: 40px;
     line-height: 40px;
     text-align: center;
@@ -84,29 +103,30 @@
 .dogstatus_img{
     position: relative;
     top: -50px;
-    left: 300px;
+    left: 12vw;
     z-index: 0;
 }
 .arrow_img{
     position: relative;
-    right: 40%;
-    top: 50px;
+    right: 60%;
+    top: 60px;
 }
 .infor>h1{
     position: absolute;
-    left: 35%;
-    color: #EEBE62;
+    left: 25%;
+    color: #FF6B35;
 }
 
 /* process */
 .process_fr{
-    position: absolute;
-    top: 200vh;
-    height: 150rem;
+    position: relative;
+    top: -120vh;
+    z-index: 0;
 }
 .process{
     position: relative;
-    top: 500px;
+    top: 30vh;
+    z-index: 1;
 }
 .process_img1{
     position: absolute;
@@ -114,18 +134,19 @@
     top: 80px;
     z-index: 1;
 }
-.process h1{
+.process h2{
     position: relative;
-    left: 50%;
-    top: 5rem;
+    left: 45%;
+    top: 10vh;
 }
 .process_content{
     position: relative;
-    left: 50%;
+    left: 42%;
     top: 150px;
-    width: 50%;
+    width: 55%;
     display: flex;
     justify-content: space-around;
+    font-size: 1.3rem;
 }
 .process_content span{
     font-weight: bold;
@@ -135,25 +156,30 @@
 }
 .process_run{
     position: relative;
-    top: 50px;
+    top: 35px;
 }
 .process_end{
     position: relative;
-    top: 230px;
+    top: 210px;
+}
+.process_description{
+    position: relative;
+    left: 10px;
 }
 .process_run_description{
     position: relative;
-    top: 50px;
+    top: 62px;
 }
 .process_end_description{
     position: relative;
-    top: 200px;
+    top: 183px;
 }
 
 /* support */
 .support_process{
     position: relative;
-    top: 70rem;
+    top: -280vh;
+    font-size: 1.3rem;
 }
 .support_content{
     position: absolute;
@@ -168,8 +194,8 @@
     left: 30px;
 }
 .process_img2{
-    position: relative;
-    left: 50%;
+    position: absolute;
+    left: 55%;
     top: 100px;
     width: 600px;
 }
@@ -177,21 +203,96 @@
 /* menu */
 .menu_fr{
     position: absolute;
-    top: 560vh;
+    top: 640vh;
+    height: 100vh;
 }
 .menu{
-    position: relative;
-    top: 90rem;
+    position: absolute;
+    top: 580vh;
+    left: 5vw;
+    width: 100%;
 }
 .menu_detail{
-    position: relative;
-    left: 200px;
+    position: absolute;
+    /* top: -500vh; */
     width: 70%;
 }
 .menu_btn_field{
     display: flex;
     justify-content: space-around;
     position: relative;
-    left: 60%;
-    width: 30%;
+    left: 45%;
+    top: 100vh;
+    width: 50%;
+}
+/* partner */
+.partner{
+    position: relative;
+    top: 7vh;
+    background: #FF8C4E;
+    height: 80vh;
+    background-image: url(../assets/backgrounds/bg-partner-overlay.png);
+}
+.partner>h1{
+    position: relative;
+    text-align: center;
+    padding-top: 20px;
+}
+.partner>svg{
+    width: 90px;
+    height: 90px;
+    position: absolute;
+    fill: white;
+    left: 47%;
+}
+.partner_list{
+    display: flex;
+    width: 100%;
+    animation: slide 40s infinite linear;
+}
+.partner_wrapper{
+    width: 85%;
+    overflow: hidden;
+    position: relative;
+    top: 10vh;
+    left: 7%;
+}
+@keyframes slide {
+    0%{
+        transform: translateX(0);
+    }
+    10%{
+        transform: translateX(-15%);
+    }
+    20%{
+        transform: translateX(-30%);
+    }
+    30%{
+        transform: translateX(-40%);
+    }
+    40%{
+        transform: translateX(-50%);
+    }
+    50%{
+        transform: translateX(-60%);
+    }
+    60%{
+        transform: translateX(-50%);
+    }
+    70%{
+        transform: translateX(-40%);
+    }
+    80%{
+        transform: translateX(-30%);
+    }
+    90%{
+        transform: translateX(-15%);
+    }
+    100%{
+        transform: translateX(0);
+    }
+}
+#footer{
+    position: relative;
+    top: 5vh;
 }
