--- a/css/Grooming.css
+++ b/css/Grooming.css
@@ -54,7 +54,7 @@
 }
 .btn>p{
     position: relative;
-    top: 15px;
+    top: 13px;
 }
 .intro_btn_field{
     display: flex;
@@ -135,7 +135,7 @@
 .menu_content{
     position: absolute;
     width: 50%;
-    top: 200px;
+    top: 50vh;
     left: 50px;
 }
 .menu_content h1{
@@ -144,28 +144,43 @@
     left: 150px;
 }
 .menu_option{
-    display: flex;
-    background-color: #fff;
-    height: 50px;
-    width: 140px;
-    border-radius: 20px;
-    box-shadow: 1px 1px 10px gray inset;
+    width: 220px;
     position: relative;
-    left: 120px;
-    top: 50px;
+    left: 7vw;
+    top: 5vh;
+    border-radius: 40px;
+    background: #fff;
+    box-shadow: inset 3px 3px 10px gainsboro;
 }
-.menu_option p{
-    padding: 15px 18px;
+.menu_option button{
+    font-size: 1.3rem;
+    padding: 15px 33px;
+    font-weight: bold;
 }
-.selected_option{
-    background-color: #F2AB1E;
-    border-radius: 20px;
-    width: 75px;
+#selected_option{
+    left: 0;
+    top: 0;
+    position: absolute;
+    width: 110px;
+    height: 100%;
+    border-radius: 40px;
+    background: #FF6B35;
+    transition: .5s;
+    box-shadow: 1px 1px 1px gray;
+}
+.toggle_btn{
+    padding: 10px 40px;
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    outline: none;
+    position: relative;
+    text-align: center;
 }
 .menu_btn_booking{
     position: relative;
-    left: 80px;
-    top: 50px;
+    left: 90px;
+    top: 100px;
     color: white;
     background-color: black;
 }
@@ -173,11 +188,14 @@
 /* extra service */
 .extra{
     position: relative;
-    top: 500px;
+    top: 15vh;
+    background-image: url(../assets/backgrounds/bg-partner-overlay.png);
+    height: 150vh;
 }
 .extra_service{
-    position: absolute;
+    position: relative;
     left: 50px;
+    top: 5vh;
 }
 .extra_content{
     position: absolute;
@@ -186,52 +204,57 @@
     top: 50px;
 }
 .extra_content h1{
-    color: #EFBB3F;
-    margin: 20px 10px;
+    color: #FF6B35;
+    margin: 10px 10px;
 }
 .service_premium_title{
-    background-color: black;
-    color: #EFBB3F;
-    width: 170px;
-    height: 170px;
-    border-radius: 100px;
+    background-color: rgb(51, 51, 51);
+    color: #fc591e;
+    width: 230px;
+    height: 230px;
+    border-radius: 500px;
     position: absolute;
-    top: 280px;
-    left: 33px;
+    top: 50vh;
+    left: -3.5vw;
 }
 .service_premium_title h2{
     position: relative;
-    top: 70px;
-    left: 10px;
+    top: 12.5vh;
+    left: 15px;
+    font-size: 2rem;
 }
 .service_premium_description{
-    background-color: #EEBE62;
-    width: 500px;
-    padding: 20px 20px 20px 60px;
+    background-image: linear-gradient(to right, #FF9933, #FF6B35);;
+    width: 600px;
+    padding: 10px 10px 10px 100px;
     position: relative;
     top: 80px;
-    left: 150px;
+    left: 6vw;
     border-radius: 0 20px 20px 0;
+    font-size: 1.2rem;
+    line-height: 40px;
 }
 .extra_btn_booking{
     position: relative;
-    top: 100px;
+    top: 70px;
     left: 200px;
 }
 .extra_note{
     margin: 15px;
+    font-size: 1.2rem;
 }
 
 /* comment */
 .comment_fr{
-    position: relative;
-    top: 1300px;
-    height: 400px;
+    position: absolute;
+    top: 600vh;
+    height: 100vh;
 }
 .comment{
     position: relative;
-    top: 950px;
+    top: 15vh;
     width: 100%;
+    font-size: 1.3rem;
 }
 .comment_img{
     position: absolute;
@@ -251,7 +274,7 @@
 .comment_content{
     position: relative; 
     left: 450px;
-    top: 50px;
+    top: 10px;
 }
 .comment hr{
     width: 70px;
@@ -302,5 +325,5 @@
 /* footer */
 .pg-footer{
     position: relative;
-    top: 160vh;
+    top: 40vh;
 }
