--- a/css/Hotel.css
+++ b/css/Hotel.css
@@ -1,17 +1,33 @@
 .container-body{
     position: relative;
-    top: 150px;
+    top: 120px;
+    font-size: 1.5rem;
+    background-color: #fffaf0;
 }
 
 /* intro */
 .address{
+    position: absolute;
+    top: 5px;
     margin-left: 50px;
+    padding: 20px 0;
+    font-size: 1.2rem;
+}
+.bg_overlay{
+    background-image: url(../assets/backgrounds/bg-home-overlay.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    opacity: 1;
+    height: 78vh;
+    position: relative;
+    z-index: 0;
 }
 .intro_content{
     width: 40%;
-    position: relative;
-    left: 70px;
-    top: 50px;
+    position: absolute;
+    left: 10vw;
+    top: 100px;
     text-align: center;
 }
 .intro_content h1{
@@ -20,13 +36,16 @@
 .btn{
     display: flex;
     justify-content: center;
-    background-color: #F2AB1E;
-    width: 130px;
+    background-color: #FF6B35;
+    width: 150px;
     height: 50px;
     border-radius: 40px;
     text-align: center;
     font-weight: bold;
     margin: 50px 50px;
+    color: white;
+    box-shadow: 2px 2px 2px grey;
+    font-size: 1.2rem;
 }
 .btn i{
     position: relative;
@@ -35,7 +54,7 @@
 }
 .btn>p{
     position: relative;
-    top: 15px;
+    top: 13px;
 }
 .intro_btn_field{
     display: flex;
@@ -50,13 +69,12 @@
     width: 35%;
     position: absolute;
     top: 40px;
-    left: 50%;
+    left: 60%;
 }
 
 /* special */
 .special_fr{
     position: relative;
-    top: 250px;
     height: 60rem;
 }
 .special{
@@ -66,55 +84,56 @@
 }
 .phone_img{
     position: absolute;
-    left: 50px;
+    left: 100px;
     width: 400px;
 }
 .special_content{
     position: absolute;
-    left: 700px;
-    top: 100px;
+    left: 650px;
+    top: 50px;
     color: white;
 }
-.special_content h1{
+.special_content h2{
     margin-bottom: 40px;
 }
 .special_content ul{
-    line-height: 30px;
-    font-weight: 200;
+    line-height: 40px;
+    font-size: 1.3rem;
 }
 .special_btn_field{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     position: relative;
     top: 40px;
+    left: -50px;
     color: black;
 }
 .special_btn_booking, .special_btn_contact{
     background-color: #fff;
+    color: #fc591e;
 }
 
 /* facilities */
 .facilities{
     position: relative;
     width: 100%;
-    top: 300px;
 }
 .facilities_detail{
     width: 600px;
     position: relative;
-    left: 150px;
+    left: 100px;
     z-index: 1;
 }
 .facilities_img{
     position: relative;
-    left: 450px;
+    left: 18vw;
     top: 30px;
 }
 
 /* room */
 .room_fr{
     position: relative;
-    top: 200px;
+    top: -10vh;
     z-index: 0;
     height: 50rem;
 }
@@ -124,29 +143,49 @@
     width: 100%;
 }
 .room_option{
-    background-color: #fff;
-    width: 260px;
-    height: 50px;
-    display: flex;
+    width: 350px;
     position: relative;
-    left: 200px;
+    left: 17vw;
     border-radius: 40px;
-    box-shadow: 1px 1px 10px gray inset;
+    background: #fff;
+    box-shadow: inset 3px 3px 10px gainsboro;
 }
-.room_option p{
-    position: relative;
-    top: 15px;
+.room_option button{
+    font-size: 1rem;
+    padding: 18px 33px;
     font-weight: bold;
-    padding: 0 10px;
 }
-.selected_option{
-    background-color: #F2AB1E;
-    padding: 0 10px;
+.room_option #selecting{
+    color: white;
+}
+.room_option>button:nth-child(2){
+    padding-left: 40px;
+}
+#selected_option{
+    left: 0;
+    top: 0;
+    position: absolute;
+    width: 175px;
+    height: 100%;
     border-radius: 40px;
+    background: #FF6B35;
+    transition: .5s;
+    box-shadow: 1px 1px 1px gray;
+}
+.room_toggle_btn{
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    outline: none;
+    position: relative;
+    text-align: center;
 }
 .room_btn_field{
-    display: flex;
-    justify-content: space-around;
+   width: 40vw;
+   display: flex;
+   position: relative;
+   top: -20px;
+   right: 50px;
 }
 .room_box{
     position: relative;
@@ -177,12 +216,12 @@
 /* menu */
 .menu{
     position: relative;
-    top: 150px;
     width: 100%;
 }
 .menu_detail{
     position: absolute;
     left: 100px;
+    z-index: 1;
 }
 .menu_content{
     position: relative;
@@ -191,19 +230,19 @@
 }
 .menu_btn_booking{
     position: relative;
-    right: 70px;
+    right: 55px;
 }
 
 /* note and rule */
 .rule_fr{
     position: relative;
-    top: 40rem;
-    z-index: -1;
-    height: 57rem;
+    top: 70vh;
+    height: 150vh;
 }
 .rule{
     position: relative;
-    top: -150px;
+    top: -60vh;
+    left: 2vw;
 }
 .rule_img{
     position: relative;
@@ -217,53 +256,133 @@
 .rule_content{
     position: absolute;
     width: 40%;
-    left: 40rem;
-    bottom: 250px;
-    line-height: 25px;
+    left: 43vw;
+    bottom: 200px;
+    line-height: 30px;
     font-weight: bold;
+    font-size: 1.3rem;
 }
 .rule_content h1{
     text-align: center;
     margin-bottom: 50px;
 }
-.rule_note{
-    background-color: #fff;
-    width: 260px;
-    height: 50px;
-    display: flex;
-    position: relative;
-    left: 200px;
-    border-radius: 40px;
-    box-shadow: 1px 1px 10px gray inset;
-    position: relative;
-    left: 50rem;
-    top: 50px;
-}
-.rule_note p{
-    position: relative;
-    top: 15px;
-    font-weight: bold;
-    padding: 0 20px;
-    left: 20px;
-}
-.rule_note>p{
-    position: relative;
-    left: -10px;
-}
+
 .rule_note_option{
-    background-color: #F2AB1E;
-    padding: 0 10px;
-    padding-right: 40px;
+    display: flex;
+    width: 300px;
+    position: relative;
+    left: 50vw;
+    top: 5vh;
     border-radius: 40px;
+    background: #fff;
+    box-shadow: inset 3px 3px 10px gainsboro;
+}
+.rule_note_option button{
+    font-size: 1rem;
+    padding: 18px 20px;
+    font-weight: bold;
+}
+#rule_note_selected{
+    left: 0;
+    top: 0;
+    position: absolute;
+    width: 150px;
+    height: 100%;
+    border-radius: 40px;
+    background: #FF6B35;
+    transition: .5s;
+    box-shadow: 1px 1px 1px gray;
+}
+#rule_selecting{
+    color: white;
+}
+.rule_note_toggle_btn{
+    width: 50%;
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    outline: none;
+    position: relative;
+    text-align: center;
 }
 
 /* takecare */
 .takecare{
     width: 100%;
     position: absolute;
+    top: 690vh;
+}
+
+/* partner */
+.partner{
+    position: relative;
+    top: 80vh;
+    background: #FF8C4E;
+    height: 80vh;
+    background-image: url(../assets/backgrounds/bg-partner-overlay.png);
+}
+.partner>h1{
+    position: relative;
+    text-align: center;
+    padding-top: 60px;
+}
+.partner>svg{
+    width: 90px;
+    height: 90px;
+    position: absolute;
+    fill: white;
+    left: 47%;
+    top: 5vh;
+}
+.partner_list{
+    display: flex;
+    width: 100%;
+    animation: slide 40s infinite linear;
+}
+.partner_wrapper{
+    width: 85%;
+    overflow: hidden;
+    position: relative;
+    top: 10vh;
+    left: 7%;
+}
+@keyframes slide {
+    0%{
+        transform: translateX(0);
+    }
+    10%{
+        transform: translateX(-15%);
+    }
+    20%{
+        transform: translateX(-30%);
+    }
+    30%{
+        transform: translateX(-40%);
+    }
+    40%{
+        transform: translateX(-50%);
+    }
+    50%{
+        transform: translateX(-60%);
+    }
+    60%{
+        transform: translateX(-50%);
+    }
+    70%{
+        transform: translateX(-40%);
+    }
+    80%{
+        transform: translateX(-30%);
+    }
+    90%{
+        transform: translateX(-15%);
+    }
+    100%{
+        transform: translateX(0);
+    }
 }
 
 .pg-footer{
     position: relative;
-    top: 130vh;
+    top: 80vh;
 }
